--- a/app/src/main/res/values/text_appearance.xml
+++ b/app/src/main/res/values/text_appearance.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="TextFieldTextStyle" parent="TextAppearance.Material3.BodyMedium">
-        <item name="fontFamily">@font/geologica_regular</item>
+        <item name="fontFamily">@font/geologica_light</item>
         <item name="android:textSize">16sp</item>
     </style>
 
@@ -19,8 +19,8 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="MiddleTitleStyle" parent="GeologicaMed16">
-
+    <style name="MiddleTitleStyle" parent="GeologicaReg16">
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="CardMediumTextStyle" parent="GeologicaReg16"/>
@@ -102,11 +102,16 @@
         <item name="android:textColor">@color/black_focus</item>
     </style>
 
-    <style name="TripConfirmGreyTextStyle" parent="GeologicaReg16">
+    <style name="TripConfirmGreyTextStyle" parent="GeologicaLight16">
         <item name="android:textColor">@color/grey_focus</item>
+    </style>
+
+    <style name="AddressSecondaryTextStyle" parent="GeologicaLight14">
+        <item name="android:textColor">@color/grey_dark</item>
     </style>
 
     <style name="GreyDescriptionTextStyle" parent="GeologicaLight12">
         <item name="android:textColor">@color/grey_focus</item>
+        <item name="android:textSize">13sp</item>
     </style>
 </resources>
