--- a/app/src/main/res/layout/block_plus_minus_big.xml
+++ b/app/src/main/res/layout/block_plus_minus_big.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,6 +12,9 @@
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
         app:icon="@drawable/minus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -19,20 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="@dimen/margin_small"
-        android:textAppearance="@style/GeologicaReg16"
-        tools:text="00" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/staticText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/margin_extra_small"
-        android:visibility="gone"
-        tools:visibility="gone"
-        android:textAppearance="@style/GeologicaReg16"
-        tools:text="xx" />
+        android:textAppearance="@style/GeologicaRegular24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/plusButton"
+        app:layout_constraintStart_toEndOf="@+id/minusButton"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="4" />
 
     <com.google.android.material.button.MaterialButton
         style="@style/SmallFabButtonStyle"
@@ -41,7 +36,10 @@
         android:layout_height="@dimen/fab_size_32"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/margin_small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:icon="@drawable/plus"
         tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.constraintlayout.widget.ConstraintLayout>
