--- a/app/src/main/res/layout/block_trip_date_time.xml
+++ b/app/src/main/res/layout/block_trip_date_time.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/routeStartInfoLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tripDateTimeLayout"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -18,10 +17,21 @@
             android:textAppearance="@style/TripConfirmGreyTextStyle"
             tools:ignore="TextContrastCheck" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/dateInfoButton"
+            style="@style/TextButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text_button_height"
+            tools:text="Вторник, 22 апреля"
+            android:visibility="visible"
+            tools:ignore="TextSizeCheck,TextContrastCheck,TouchTargetSizeCheck"
+            tools:visibility="visible" />
+
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
+            tools:visibility="gone"
             android:textAppearance="@style/CardMediumTextStyle"
             tools:text="Вторник, 22 апреля" />
 
@@ -66,61 +76,4 @@
             tools:visibility="gone" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/margin_small"
-        android:background="@color/light_grey_focus" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/trip_confirm_address_text"
-            android:textAppearance="@style/TripConfirmGreyTextStyle"
-            tools:ignore="TextContrastCheck" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/addressFromText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:maxLines="2"
-            android:textAppearance="@style/CardMediumTextStyle"
-            tools:text="г. Исфара, Таджикистан" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_extra_small" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/trip_confirm_address_point_text"
-        android:textAppearance="@style/TripConfirmGreyTextStyle"
-        tools:ignore="TextContrastCheck" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="?attr/textInputFilledStyle"
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:layout_marginTop="@dimen/margin_extra_small"
-        android:textColorHint="@color/grey_focus"
-        app:boxBackgroundColor="@color/md_theme_background"
-        app:hintEnabled="false">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/trip_confirm_address_point_field_hint"
-            style="@style/UnderlineEditTextStyle"
-            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
-    </com.google.android.material.textfield.TextInputLayout>
-
 </androidx.appcompat.widget.LinearLayoutCompat>
