--- a/app/src/main/res/layout/fragment_new_trip_step_1.xml
+++ b/app/src/main/res/layout/fragment_new_trip_step_1.xml
@@ -29,6 +29,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/padding_under_scroll_layout"
             android:layout_marginHorizontal="@dimen/margin_medium"
             android:orientation="vertical">
 
@@ -93,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginBottom="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_small"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +109,7 @@
             android:text="@string/button_to_back_text"
             app:iconGravity="textStart"
             app:iconSize="@dimen/fab_size_32"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -122,6 +124,7 @@
             android:text="@string/new_trip_next_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/backButton"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
