--- a/app/src/main/res/layout/fragment_new_trip_step_3.xml
+++ b/app/src/main/res/layout/fragment_new_trip_step_3.xml
@@ -30,12 +30,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/margin_medium"
+            android:paddingBottom="@dimen/padding_under_scroll_layout"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/new_trip_confirm_step_1_screen_title"
+                android:text="@string/new_trip_confirm_step_3_screen_title"
                 android:textAlignment="textStart"
                 android:textAppearance="@style/ScreenTitleStyle"
                 tools:ignore="TextContrastCheck" />
@@ -48,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_extra_small"
-                android:text="@string/trip_confirm_address_title_text"
+                android:text="@string/trip_confirm_car_title"
                 android:textAlignment="textStart"
                 android:textAppearance="@style/MiddleTitleStyle" />
 
@@ -57,21 +58,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/setCarButton"
+                    style="@style/TextButtonStyle"
+                    android:layout_width="@dimen/button_max_width"
+                    android:layout_height="@dimen/text_button_height"
+                    android:layout_gravity="center"
+                    android:text="@string/trip_confirm_set_car_button_text"
+                    android:visibility="gone"
+                    tools:visibility="gone" />
+
                 <include
-                    android:id="@+id/addressBlock"
-                    layout="@layout/block_trip_address" />
+                    android:id="@+id/carBlock"
+                    tools:visibility="visible"
+                    layout="@layout/block_car_selected" />
 
             </com.google.android.material.card.MaterialCardView>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/margin_small" />
+                android:layout_height="@dimen/margin_small_10" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_extra_small"
-                android:text="@string/trip_confirm_date_time_title_text"
+                android:text="@string/new_trip_confirm_passenger_count_title"
                 android:textAlignment="textStart"
                 android:textAppearance="@style/MiddleTitleStyle" />
 
@@ -81,8 +93,8 @@
                 android:layout_height="wrap_content">
 
                 <include
-                    android:id="@+id/dateTimeBlock"
-                    layout="@layout/block_trip_date_time" />
+                    android:id="@+id/seatsCountBlock"
+                    layout="@layout/block_plus_minus_big" />
 
             </com.google.android.material.card.MaterialCardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -93,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="@dimen/margin_medium"
-        android:layout_marginBottom="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_small"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +119,7 @@
             android:contentDescription="@null"
             android:text="@string/button_to_back_text"
             app:iconGravity="textStart"
+            android:visibility="gone"
             app:iconSize="@dimen/fab_size_32"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +135,7 @@
             android:text="@string/new_trip_next_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
 
