--- a/app/src/main/res/layout/block_car_selected.xml
+++ b/app/src/main/res/layout/block_car_selected.xml
@@ -11,7 +11,7 @@
         android:id="@+id/carImageCard"
         android:layout_width="@dimen/trip_card_car_card_size"
         android:layout_height="@dimen/trip_card_car_card_size"
-        app:cardCornerRadius="@dimen/card_corner_16"
+        app:cardCornerRadius="@dimen/card_corner_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeWidth="0dp">
