--- a/app/src/main/res/layout/trip_card.xml
+++ b/app/src/main/res/layout/trip_card.xml
@@ -73,7 +73,7 @@
             android:id="@+id/carImageCard"
             android:layout_width="@dimen/trip_card_car_card_size"
             android:layout_height="@dimen/trip_card_car_card_size"
-            app:cardCornerRadius="@dimen/card_corner_16"
+            app:cardCornerRadius="@dimen/card_corner_medium"
             app:strokeWidth="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/invisibleDivider">
