--- a/app/src/main/res/navigation/nav_profile.xml
+++ b/app/src/main/res/navigation/nav_profile.xml
@@ -2,10 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/menu_profile"
-    app:startDestination="@id/searchFragment3">
+    app:startDestination="@id/profileFragment">
 
     <fragment
-        android:id="@+id/searchFragment3"
-        android:name="com.al4apps.travelers.presentation.search.SearchFragment"
-        android:label="SearchFragment" />
+        android:id="@+id/profileFragment"
+        android:name="com.al4apps.travelers.presentation.profile.ProfileFragment"
+        android:label="ProfileFragment" />
 </navigation>
