--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,15 +51,28 @@
         <item name="contentPaddingTop">@dimen/padding_large</item>
         <item name="contentPaddingBottom">@dimen/padding_large_32</item>
         <item name="strokeWidth">0dp</item>
-        <item name="cardCornerRadius">@dimen/card_corner_16</item>
+        <item name="cardCornerRadius">@dimen/card_corner_medium</item>
     </style>
 
     <style name="TripCardViewStyle" parent="Widget.Material3.CardView.Outlined">
         <item name="cardBackgroundColor">@color/md_theme_surface</item>
         <item name="contentPadding">@dimen/padding_medium</item>
         <item name="strokeWidth">1dp</item>
-        <item name="cardCornerRadius">@dimen/card_corner_16</item>
+        <item name="cardCornerRadius">@dimen/card_corner_medium</item>
     </style>
+
+    <style name="ProfileCardViewStyle" parent="Widget.Material3.CardView.Filled">
+        <item name="cardBackgroundColor">@color/md_theme_inverseOnSurface</item>
+        <item name="contentPadding">@dimen/padding_medium</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="contentPaddingTop">@dimen/padding_small</item>
+        <item name="contentPaddingBottom">@dimen/padding_small</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="cardCornerRadius">@dimen/card_corner_medium</item>
+    </style>
+
+
 
     <style name="TripPriceCardViewStyle" parent="Widget.Material3.CardView.Filled">
         <item name="cardBackgroundColor">@color/md_theme_surface</item>
@@ -68,7 +81,7 @@
         <item name="contentPaddingTop">@dimen/padding_extra_small</item>
         <item name="contentPaddingBottom">@dimen/padding_extra_small</item>
         <item name="strokeWidth">1dp</item>
-        <item name="cardCornerRadius">@dimen/card_corner_8</item>
+        <item name="cardCornerRadius">@dimen/card_corner_small</item>
     </style>
 
     <style name="CardViewOnTripScreenStyle" parent="Widget.Material3.CardView.Elevated">
@@ -83,7 +96,7 @@
     <style name="BlurCardViewOnImageStyle" parent="Widget.Material3.CardView.Filled">
         <item name="cardBackgroundColor">@color/background_blur</item>
         <item name="strokeWidth">0dp</item>
-        <item name="cardCornerRadius">@dimen/card_corner_8</item>
+        <item name="cardCornerRadius">@dimen/card_corner_small</item>
         <item name="contentPaddingLeft">@dimen/margin_medium</item>
         <item name="contentPaddingRight">@dimen/margin_medium</item>
     </style>
@@ -103,13 +116,13 @@
     </style>
 
     <style name="OutlinedButtonStyle" parent="Widget.Material3.Button.OutlinedButton">
-        <item name="cornerRadius">@dimen/card_corner_8</item>
+        <item name="cornerRadius">@dimen/card_corner_small</item>
         <item name="android:paddingVertical">0dp</item>
         <item name="android:textAppearance">@style/GeologicaReg16</item>
     </style>
 
     <style name="FilledButtonStyle" parent="Widget.Material3.Button">
-        <item name="cornerRadius">@dimen/card_corner_8</item>
+        <item name="cornerRadius">@dimen/card_corner_small</item>
         <item name="android:paddingVertical">0dp</item>
         <item name="android:textAppearance">@style/GeologicaReg16</item>
     </style>
