--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,8 +30,11 @@
         tools:visibility="gone" />
 
     <ScrollView
+        android:id="@+id/scrollAuthLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +43,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/authLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginHorizontal="@dimen/margin_medium">
 
