--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,5 @@
     <dimen name="profile_ava_card_radius">20dp</dimen>
     <dimen name="profile_auth_info_block_height">60dp</dimen>
     <dimen name="phone_menu_width">68dp</dimen>
+    <dimen name="phone_block_edit_text_drawable_padding">28dp</dimen>
 </resources>
