--- a/app/src/main/res/layout/block_phone_text_field.xml
+++ b/app/src/main/res/layout/block_phone_text_field.xml
@@ -21,7 +21,7 @@
             style="@style/AddressEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/basic_edit_text_height"
-            android:drawablePadding="@dimen/padding_large"
+            android:drawablePadding="@dimen/phone_block_edit_text_drawable_padding"
             android:inputType="number"
             android:hint="@string/registration_phone_hint"
             tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         app:strokeWidth="0dp"
         android:visibility="gone"
-        tools:visibility="visible"
+        tools:visibility="gone"
         android:layout_marginStart="@dimen/margin_extra_small"
         android:layout_marginTop="@dimen/margin_extra_small"
         app:layout_constraintStart_toStartOf="@id/phoneInputLayout"
