--- a/app/src/main/res/navigation/nav_profile.xml
+++ b/app/src/main/res/navigation/nav_profile.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_profileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_profileEditFragment"
+            app:destination="@id/profileEditFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -23,4 +26,8 @@
         android:id="@+id/loginFragment"
         android:name="com.al4apps.travelers.presentation.login.LoginFragment"
         android:label="LoginFragment" />
+    <fragment
+        android:id="@+id/profileEditFragment"
+        android:name="com.al4apps.travelers.presentation.profile.ProfileEditFragment"
+        android:label="ProfileEditFragment" />
 </navigation>
