--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,6 +81,15 @@
         <item name="cardCornerRadius">@dimen/card_corner_medium</item>
     </style>
 
+    <style name="ProfileImageCardViewStyle" parent="Widget.Material3.CardView.Filled">
+        <item name="cardBackgroundColor">@color/md_theme_background</item>
+        <item name="contentPadding">0dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="cardCornerRadius">@dimen/profile_edit_image_card_radius</item>
+    </style>
+
 
 
     <style name="TripPriceCardViewStyle" parent="Widget.Material3.CardView.Filled">
