--- a/app/src/main/res/navigation/nav_profile.xml
+++ b/app/src/main/res/navigation/nav_profile.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_profileFragment_to_myTripsFragment"
             app:destination="@id/myTripsFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -44,4 +47,8 @@
         android:id="@+id/myTripsFragment"
         android:name="com.al4apps.travelers.presentation.mytrips.MyTripsFragment"
         android:label="MyTripsFragment" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.al4apps.travelers.presentation.settings.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
